care-australia-uat/force-app/main/default/objects/Bank_Response_Code__c/Bank_Response_Code__c.object-meta.xml
<CustomObject>
    <label>Bank Response Code</label>
    <nameField>
        <label>Bank Response Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Response Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>