care-australia-uat/force-app/main/default/objects/Bank_Response_Code__c/fields/Payment_Result__c.field-meta.xml
<CustomField>
    <fullName>Payment_Result__c</fullName>
    <inlineHelpText>Payment Result to Output onto the Payment Record</inlineHelpText>
    <label>Payment Result</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Result</valueSetName>
    </valueSet>
</CustomField>