care-australia-uat/force-app/main/default/objects/Bank_Response_Code__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <label>Response Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>