care-australia-uat/force-app/main/default/objects/Bank_Response_Code__c/fields/Response_Code_Ref__c.field-meta.xml
<CustomField>
    <fullName>Response_Code_Ref__c</fullName>
    <description>This field will be used to as an unique identifier for Bank Response records.</description>
    <formula>IF( 
OR( ISBLANK(TEXT(Merchant_Category__c )), 
ISBLANK( TEXT(Payment_Method__c )), 
ISBLANK(Response_Code__c) 
), 
NULL, 
SUBSTITUTE(TEXT(Merchant_Category__c)&amp;&quot;_&quot;&amp;TEXT(Payment_Method__c)&amp;&quot;_&quot;&amp;Response_Code__c,&quot; &quot;,&quot;&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be used to as an unique identifier for Bank Response records.</inlineHelpText>
    <label>Response Code Ref</label>
    <type>Text</type>
</CustomField>