care-australia-uat/force-app/main/default/objects/Bank_Response_Code__c/fields/Result_Text__c.field-meta.xml
<CustomField>
    <fullName>Result_Text__c</fullName>
    <inlineHelpText>Output value for result text that is updated onto the Payment Record</inlineHelpText>
    <label>Result Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>